[package]
name = "ursa-major"
description = "Rogulike RPG sandbox"
version = "0.1.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/ursa-major"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7", features = ["wasm-bindgen"] }
mapgen = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]